--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,108 @@
+<!-- base.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Personal Carbon Footprint Estimator{% endblock %}</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
+    <style>
+      .navbar-brand img {
+        height: 60px;
+        margin-right: 10px;
+      }
+    </style>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% block extra_head %}{% endblock %}
 </head>
 <body>
+    <!-- Header -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary text-white">
+        <div class="container-fluid">
+            <a class="navbar-brand nav-link active nav-tabs" href="{% url 'home' %}">
+                <img src="{% static 'images/logo.jpg' %}" alt="Logo" class="rounded float-end">
+                Home
+            </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+        
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="nav justify-content-end nav-tabs">
+                        {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="{% url 'calculate' %}">Calculate Footprint</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="{% url 'logout' %}">Logout</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-white" href="{% url 'visualise' %}">History</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="{% url 'login' %}">Login</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-white" href="{% url 'signup' %}">Register</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-white" href="{% url 'global_footprint' %}">Global Footprint</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+        </div>
+    </nav>
 
+    <!-- Content -->
+    {% block content %}{% endblock %}
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!--Footer -->
+    <!-- Footer -->
+<footer class="bg-secondary text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+            <!-- Facebook -->
+             <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/" role="button"><i class="fab fa-facebook-f"></i></a>
+
+            <!-- Twitter -->
+            <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://www.twitter.com/" role="button"><i class="fab fa-twitter"></i></a>
+
+            <!-- Google -->
+            <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://www.google.com/" role="button"><i class="fab fa-google"></i></a>
+
+            <!-- Instagram -->
+            <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button"><i class="fab fa-instagram"></i></a>
+
+            <!-- Linkedin -->
+            <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/" role="button"><i class="fab fa-linkedin-in"></i></a>
+
+            <!-- Github -->
+            <a data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://www.github.com/" role="button"><i class="fab fa-github"></i></a>
+        </section>
+        <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <p>&copy; {% now "Y" %} Personal Carbon Footprint Estimator:</p>
+        <a class="text-white" href="https://pcfe_app.com">Estimator.org</a>
+    </div>
+    <!-- Copyright -->
+</footer>
+<!-- Footer -->
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html>
